# MNist_Classifier

./: .gitignore  CMakeLists.txt
include/: activations.h  dataset.h  matrix.h  network.h
include/DataLoaders/: IDataLoader.h  MNistLoader.h
src/: dataset.cpp  main.cpp  matrix.cpp  network.cpp  network.tpp
src/DataLoaders/: MNistLoader.cpp
test/: CMakeLists.txt  test_MNistLoader.cpp  test_activations.cpp  test_matrix.cpp  test_network.cpp
